--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # HTTP
-quarkus.http.port=8082
+quarkus.http.port=8083
 
 # Kafka Configuration
 kafka.bootstrap.servers=nakupify-kafka-kafka-bootstrap.default.svc.cluster.local:9092
@@ -9,11 +9,15 @@ mp.messaging.incoming.nakup-in.connector=smallrye-kafka
 mp.messaging.incoming.nakup-in.topic=nakup
 mp.messaging.incoming.nakup-in.auto.offset.reset=earliest
 mp.messaging.incoming.nakup-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# Allow consumer to trigger creation if topic is missing
+mp.messaging.incoming.nakup-in.prop.allow.auto.create.topics=true
 
 # Outgoing order events for other services
 mp.messaging.outgoing.orders-out.connector=smallrye-kafka
 mp.messaging.outgoing.orders-out.topic=orders
 mp.messaging.outgoing.orders-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+# Allow producer to trigger creation if topic is missing
+mp.messaging.outgoing.orders-out.prop.allow.auto.create.topics=true
 
 # PostgreSQL Configuration
 quarkus.datasource.db-kind=postgresql
@@ -28,4 +32,4 @@ quarkus.hibernate-orm.packages=si.nakupify.entity
 
 # Dependent services
 # Base URL of microservice-posiljanje for internal calls
-shipments.base-url=http://microservice-posiljanje:8081
+shipments.base-url=http://microservice-posiljanje:8084
