--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,18 @@ mp.messaging.incoming.nakup-in.value.deserializer=org.apache.kafka.common.serial
 # Allow consumer to trigger creation if topic is missing
 mp.messaging.incoming.nakup-in.prop.allow.auto.create.topics=true
 
-# Outgoing order events for other services
-mp.messaging.outgoing.orders-out.connector=smallrye-kafka
-mp.messaging.outgoing.orders-out.topic=orders
-mp.messaging.outgoing.orders-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-# Allow producer to trigger creation if topic is missing
-mp.messaging.outgoing.orders-out.prop.allow.auto.create.topics=true
+# Outgoing shipment requests
+mp.messaging.outgoing.shipment-requests-out.connector=smallrye-kafka
+mp.messaging.outgoing.shipment-requests-out.topic=shipment-requests
+mp.messaging.outgoing.shipment-requests-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.shipment-requests-out.prop.allow.auto.create.topics=true
+
+# Incoming shipment events from microservice-posiljanje
+mp.messaging.incoming.shipments-in.connector=smallrye-kafka
+mp.messaging.incoming.shipments-in.topic=shipments
+mp.messaging.incoming.shipments-in.auto.offset.reset=earliest
+mp.messaging.incoming.shipments-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.shipments-in.prop.allow.auto.create.topics=true
 
 # PostgreSQL Configuration
 quarkus.datasource.db-kind=postgresql
@@ -29,7 +35,3 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://nakupify-db-rw.default.svc.cluster
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.packages=si.nakupify.entity
-
-# Dependent services
-# Base URL of microservice-posiljanje for internal calls
-shipments.base-url=http://microservice-posiljanje:8084
