--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,30 @@
 # HTTP
 quarkus.http.port=8083
-
+# CORS
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+quarkus.http.cors.headers=*
+quarkus.http.cors.access-control-allow-credentials=true
 # Incoming from microservice-nakup (purchase microservice)
 mp.messaging.incoming.nakup-in.connector=smallrye-kafka
 mp.messaging.incoming.nakup-in.topic=nakup
 mp.messaging.incoming.nakup-in.auto.offset.reset=earliest
 mp.messaging.incoming.nakup-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.nakup-in.prop.allow.auto.create.topics=true
-
 # Outgoing shipment requests
 mp.messaging.outgoing.shipment-requests-out.connector=smallrye-kafka
 mp.messaging.outgoing.shipment-requests-out.topic=shipment-requests
 mp.messaging.outgoing.shipment-requests-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.shipment-requests-out.prop.allow.auto.create.topics=true
-
 # Incoming shipment events from microservice-posiljanje
 mp.messaging.incoming.shipments-in.connector=smallrye-kafka
 mp.messaging.incoming.shipments-in.topic=shipments
 mp.messaging.incoming.shipments-in.auto.offset.reset=earliest
 mp.messaging.incoming.shipments-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.shipments-in.prop.allow.auto.create.topics=true
-
 # PostgreSQL Configuration
 quarkus.datasource.db-kind=postgresql
-
 # Hibernate ORM
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=false
