--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.packages=si.nakupify.entity
+# Keycloak
+#quarkus.oidc.auth-server-url=http://localhost:8079/realms/nakupify
+#quarkus.oidc.client-id=quarkus-backend
+quarkus.oidc.application-type=service
